<resources>
    <string name="app_name">Aire Libre</string>
    <string name="live_broadcast">Aire Libre</string>
    <string name="no_stream">No hay stream</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="lbl_emisoras">EMISORAS</string>
    <string name="nav_almusica">AL MÚSICA</string>
    <string name="nav_alcdmx">AL CDMX</string>
    <string name="nav_altulum">AL TULÚM</string>
    <string name="nav_schedule">Programación</string>
    <string name="nav_favs">Favoritos</string>
    <string name="nav_us">Nosotros</string>
    <string name="nav_contact">Contacto</string>
    <string name="nav_terms">Términos &amp; Condiciones</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>AL Música</item>
        <item>AL CDMX</item>
        <item>AL Tulúm</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string name="nav_share">Compartir</string>
    <string name="txt_dummy">- Aire Libre -</string>
    <string name="num_dummy">00:00</string>

    <!--CONTACTO FRAGMENT-->
    <string name="txt_contacto">Let us know your thoughts. We would love to hear from you.</string>
    <string name="txt_escribenos">SEND US A MAIL TO:</string>
    <string name="lbl_email">hola@airelibre.com</string>

    <string name="txt_dummy_lipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non risus metus. Nulla quis sem in tellus laoreet pulvinar. Pellentesque eleifend est in velit sagittis condimentum. Ut eget arcu vitae urna facilisis vulputate eget lacinia purus. Duis non ligula nec orci tincidunt pulvinar. Aenean porttitor eros ante, eget congue metus feugiat vitae. Pellentesque non risus lorem. Vestibulum ac purus erat. Integer congue maximus lectus, finibus rhoncus odio posuere quis. Sed purus quam, fermentum ac lorem ac, hendrerit tempor ex. Suspendisse posuere ut est ac dignissim. Fusce blandit luctus gravida. Nam pulvinar augue finibus leo laoreet, vel rutrum sapien sollicitudin. Nulla pretium nec lacus rhoncus tincidunt. Cras posuere consequat lacus. Sed id egestas augue. Suspendisse ac eleifend justo. Phasellus in commodo lectus. Maecenas pretium, ipsum eget luctus lobortis, sem odio posuere nulla, quis commodo purus sem non nibh. Aliquam auctor sapien non ornare egestas. Etiam quis nibh vehicula, vehicula mauris vel, consequat lorem. Pellentesque in vulputate dui. Nam vitae pharetra nibh. Duis ipsum eros, consequat eget eleifend eget, sagittis eget lacus. Integer malesuada turpis et neque facilisis dapibus. Quisque sollicitudin ex sed sagittis ullamcorper. Nunc nec enim nunc. Praesent nec leo at neque finibus rhoncus quis eget ex. Duis porttitor justo urna, quis dapibus leo euismod ut. Duis ullamcorper, sapien sit amet condimentum vehicula, sapien massa lobortis turpis, at dictum diam elit eu ex. Pellentesque lorem ligula, viverra vitae aliquet eget, laoreet in erat. Vestibulum mollis at justo eget euismod. Fusce enim ipsum, scelerisque sed sodales eu, placerat ac neque. Nunc egestas, arcu at feugiat tincidunt, nisi ante laoreet arcu, vitae bibendum elit justo in neque. Sed eget ligula vitae sapien mollis ultrices. Nunc id justo sit amet magna sollicitudin scelerisque. Donec venenatis enim quis lacus bibendum, vitae luctus eros malesuada. Cras condimentum ante sit amet eros lacinia, nec molestie arcu ultricies. Aliquam bibendum ligula enim, ut finibus ipsum feugiat sed. Sed sollicitudin sapien sit amet massa tristique, vehicula porttitor massa dictum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus ornare scelerisque ligula, laoreet maximus nunc lacinia et. Morbi ultrices mi id lectus rhoncus tempus. Aenean maximus condimentum nunc, id varius ipsum suscipit quis. Nulla id lorem orci. Vestibulum aliquam purus libero, eu efficitur lectus ornare sit amet. Duis sagittis rhoncus dolor, sed porta eros consequat at. Duis malesuada vitae odio vel ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum fringilla metus a orci placerat, imperdiet ultrices arcu malesuada. Cras ut odio eros. Etiam ullamcorper, sapien quis lobortis vulputate, eros augue eleifend sapien, sed sagittis nunc enim sed massa. Aliquam non sodales leo, vel semper massa. Vestibulum eu faucibus lectus. Quisque eleifend vestibulum velit, feugiat dignissim ex tincidunt sed. Suspendisse potenti. Vivamus malesuada, ipsum blandit finibus ultrices, nisi lacus commodo leo, eget dignissim tortor sem sit amet magna. Etiam dignissim, nibh ut scelerisque molestie, lectus massa tempus tortor, ac dapibus ipsum tellus at tellus. Aliquam tempor lectus vitae volutpat hendrerit.
    </string>


    <string name="activity_title_about_us">Nosotros</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--FAVORITOS-->
    <string name="lbl_favs_empty">¡Aquí aparecerán tus canciones favoritas!</string>
    <string name="lbl_favs_empty_2">Da click en el corazón &#10084; para empezar a agregar canciones a tu lista</string>


    <!--NOSOTROS -->
    <string name="txt_description">The term &quot;radio&quot; is derived from the Latin word &quot;radius&quot;, meaning &quot;spoke of a wheel, beam of light, ray&quot;. It was first applied to communications in 1881.</string>
    <string name="txt_radio_description">The switch to &quot;radio&quot; in place of &quot;wireless&quot; took place slowly and unevenly in the English-speaking world. Lee de Forest helped popularize the new word in the United States—in early 1907 he founded the DeForest Radio Telephone Company, and his letter in the June 22, 1907 Electrical World about the need for legal restrictions warned that &quot;Radio chaos will certainly be the result until such stringent regulation is enforced&quot;.</string>
    <string name="sub_radio">Radio.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
