<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_favoritos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nav_favs"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/dark_grey_blue"
        android:lineSpacingExtra="8sp"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bottom_border"
        app:layout_constraintTop_toBottomOf="@id/txt_favoritos"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        />

    <ImageView
        android:id="@+id/f_img_view"
        android:contentDescription="favourite_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_empty_state_illustration"
        app:layout_constraintTop_toBottomOf="@+id/txt_favoritos"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="84dp" />

    <TextView
        android:id="@+id/txt_yourTracks"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_favs_empty"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/f_img_view"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="52dp" />


    <TextView
        android:id="@+id/txt_startTapping"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/slate_grey"
        android:lineSpacingExtra="6sp"
        android:textAlignment="center"
        android:text="@string/lbl_favs_empty_2"
        app:layout_constraintTop_toBottomOf="@+id/txt_yourTracks"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="86dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="86dp"
        />

</android.support.constraint.ConstraintLayout>